--- a/eTools Ultimate/Views/Pages/Giftbox/GiftboxPage.xaml
+++ b/eTools Ultimate/Views/Pages/Giftbox/GiftboxPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
@@ -126,7 +127,7 @@
                     Margin="10,10,10,10"
                     BorderThickness="0"
                     Icon="Search24"
-                    PlaceholderText="Suche..."
+                    PlaceholderText="{i18n:StringLocalizer 'Search'}"
                     Text="{Binding ViewModel.SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             </Border>
 
@@ -221,37 +222,37 @@
                     Margin="0,0,0,10"
                     FontSize="24"
                     FontTypography="Title">
-                    <Run Text="Items in:" />
+                    <Run Text="{i18n:StringLocalizer 'ItemsIn'}" />
                     <Run Text="{Binding SelectedItem.Item.Name, ElementName=GiftboxListView}" />
                 </ui:TextBlock>
 
-                <ui:Button Grid.Column="1" ToolTip="Undo">
+                <ui:Button Grid.Column="1" ToolTip="{i18n:StringLocalizer 'Undo'}">
                     <ui:SymbolIcon Symbol="ArrowUndo24" />
                 </ui:Button>
 
                 <ui:Button
                     Grid.Column="2"
                     Margin="10,0,10,0"
-                    ToolTip="Redo">
+                    ToolTip="{i18n:StringLocalizer 'Redo'}">
                     <ui:SymbolIcon Symbol="ArrowRedo24" />
                 </ui:Button>
 
                 <ui:Button
                     Grid.Column="3"
                     Margin="0,0,10,0"
-                    Content="Save" />
+                    Content="{i18n:StringLocalizer 'Save'}" />
 
                 <ui:Button
                     Grid.Column="4"
                     Margin="0,0,10,0"
                     Appearance="Secondary"
-                    Content="Expert"
+                    Content="{i18n:StringLocalizer 'Expert'}"
                     Icon="Settings24" />
 
                 <ui:Button
                     Grid.Column="5"
                     Background="#2F70AF"
-                    Content="Add Item"
+                    Content="{i18n:StringLocalizer 'AddItem'}"
                     Icon="Add24"
                     Click="AddItemButton_Click" />
             </Grid>
@@ -273,7 +274,7 @@
                     Margin="5,0,0,0"
                     FontTypography="Caption"
                     Foreground="{DynamicResource TextFillColorSecondaryBrush}">
-                    <Run Text="Items in box :" />
+                    <Run Text="{i18n:StringLocalizer 'ItemsInBox'}" />
                     <Run Text="{Binding SelectedItem.Items.Count, Mode=OneWay, ElementName=GiftboxListView}" />
                 </ui:TextBlock>
             </Grid>
@@ -283,7 +284,8 @@
                 Grid.Row="2"
                 Margin="0,0,0,10"
                 Foreground="{DynamicResource TextFillColorSecondaryBrush}">
-                Total probability :<Run Text="{Binding SelectedItem.TotalProbability, Mode=OneWay, ElementName=GiftboxListView}" />
+                <Run Text="{i18n:StringLocalizer 'TotalProbability'}" />
+                <Run Text="{Binding SelectedItem.TotalProbability, Mode=OneWay, ElementName=GiftboxListView}" />
                 (<Run Text="{Binding SelectedItem.TotalProbabilityPercent, Mode=OneWay, ElementName=GiftboxListView}" />
                 <!--    -->
                 %)
@@ -331,7 +333,7 @@
                     <DataGrid.Columns>
                         <DataGridTemplateColumn
                             Width="*"
-                            Header="Item"
+                            Header="{i18n:StringLocalizer 'Item'}"
                             SortMemberPath="Item.Name">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
@@ -369,12 +371,12 @@
                         <DataGridTextColumn
                             Width="Auto"
                             Binding="{Binding NNum}"
-                            Header="Quantity" />
+                            Header="{i18n:StringLocalizer 'Quantity'}" />
                         <DataGridTextColumn
                             Width="Auto"
                             Binding="{Binding ProbabilityPercent}"
-                            Header="%" />
-                        <DataGridTemplateColumn Width="Auto" Header="Actions">
+                            Header="{i18n:StringLocalizer 'Percentage'}" />
+                        <DataGridTemplateColumn Width="Auto" Header="{i18n:StringLocalizer 'Actions'}">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <StackPanel Orientation="Horizontal">
@@ -383,7 +385,7 @@
                                             Padding="8"
                                             Appearance="Secondary"
                                             Icon="Edit24"
-                                            ToolTip="Edit"
+                                            ToolTip="{i18n:StringLocalizer 'Edit'}"
                                             Click="EditItemButton_Click">
                                             <ui:SymbolIcon Symbol="Edit24" />
                                         </ui:Button>
@@ -391,7 +393,7 @@
                                             Padding="8"
                                             Appearance="Danger"
                                             Icon="Delete24"
-                                            ToolTip="Delete">
+                                            ToolTip="{i18n:StringLocalizer 'Delete'}">
                                             <ui:SymbolIcon Symbol="Delete24" />
                                         </ui:Button>
                                     </StackPanel>
